--- a/Open GL Project/Open GL Project.vcxproj
+++ b/Open GL Project/Open GL Project.vcxproj
@@ -53,7 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\charl.cilliers\Documents\Visual Studio 2012\Projects\Open GL Project\Open GL Project\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\github\FS29ComputerGraphics\Open GL Project\letters;C:\Users\charl.cilliers\Documents\Visual Studio 2012\Projects\Open GL Project\Open GL Project\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,14 +79,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
+    <ClInclude Include="letters\letterKCA.h" />
+    <ClInclude Include="letters\lettersLGD.h" />
     <ClInclude Include="lib\3DCurve.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="letters\letterKCA.cpp" />
+    <ClCompile Include="letters\lettersLGD.cpp" />
     <ClCompile Include="lib\3DCurve.cpp" />
     <ClCompile Include="Open GL Project.cpp" />
     <ClCompile Include="stdafx.cpp" />
