--- a/Open GL Project/Open GL Project.vcxproj
+++ b/Open GL Project/Open GL Project.vcxproj
@@ -53,7 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\github\FS29ComputerGraphics\Open GL Project\letters;C:\Users\charl.cilliers\Documents\Visual Studio 2012\Projects\Open GL Project\Open GL Project\lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./lib;./letters;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -82,6 +82,7 @@
     <ClInclude Include="letters\letterKCA.h" />
     <ClInclude Include="letters\lettersLGD.h" />
     <ClInclude Include="lib\3DCurve.h" />
+    <ClInclude Include="lib\3DPipe.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -89,6 +90,7 @@
     <ClCompile Include="letters\letterKCA.cpp" />
     <ClCompile Include="letters\lettersLGD.cpp" />
     <ClCompile Include="lib\3DCurve.cpp" />
+    <ClCompile Include="lib\3DPipe.cpp" />
     <ClCompile Include="Open GL Project.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
