--- a/Open GL Project/Open GL Project.vcxproj.filters
+++ b/Open GL Project/Open GL Project.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="letters\lettersLGD.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="lib\3DPipe.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="letters\lettersLGD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\3DPipe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
