--- a/Open GL Project/Open GL Project.vcxproj
+++ b/Open GL Project/Open GL Project.vcxproj
@@ -79,7 +79,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="LettersHBI.h" />
+    <ClInclude Include="letters\LettersHBI.h" />
     <ClInclude Include="letters\lettersKCA.h" />
     <ClInclude Include="letters\lettersLGD.h" />
     <ClInclude Include="lib\3DCurve.h" />
@@ -88,7 +88,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="LettersHBI.cpp" />
+    <ClCompile Include="letters\LettersHBI.cpp" />
     <ClCompile Include="letters\letterKCA.cpp" />
     <ClCompile Include="letters\lettersLGD.cpp" />
     <ClCompile Include="lib\3DCurve.cpp" />
