Adding the individual scenes and changed the structure to allow better flow for the scenes

--- a/Open GL Project/Open GL Project.vcxproj
+++ b/Open GL Project/Open GL Project.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="letters\LettersHBI.h" />
     <ClInclude Include="letters\lettersKCA.h" />
     <ClInclude Include="letters\lettersLGD.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="lib\3DCurve.h" />
     <ClInclude Include="lib\3DPipe.h" />
     <ClInclude Include="stdafx.h" />
@@ -91,6 +92,7 @@
     <ClCompile Include="letters\LettersHBI.cpp" />
     <ClCompile Include="letters\letterKCA.cpp" />
     <ClCompile Include="letters\lettersLGD.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="lib\3DCurve.cpp" />
     <ClCompile Include="lib\3DPipe.cpp" />
     <ClCompile Include="Open GL Project.cpp" />
